# functional

./: CMakeLists.txt  README.md  bind.hpp  functional.hpp  main.cpp
